syntax = "proto3";

import "schema/person.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/stackpath/backend-developer-tests/grpc-service/pkg/proto/service";

service Person {
  rpc GetPeople(GetPeopleRequest) returns (GetPeopleResponse);
  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse);
}

message GetPeopleRequest {
  google.protobuf.StringValue first_name = 1;
  google.protobuf.StringValue last_name = 2;
  google.protobuf.StringValue phone_number = 3;
}

message GetPeopleResponse {
  repeated person.Person results = 1;
}

message GetPersonRequest {
  string id = 1;
}

message GetPersonResponse {
  person.Person person = 1;
}
